Add Cloudinary integration for image uploads and refactor authentication handling
- Introduced Cloudinary dependency for image management.
- Removed JwtAuthenticationFilter and replaced it with a new implementation in the security package.
- Updated SecurityConfig to integrate the new JwtAuthenticationFilter.
- Added FileUploadController for handling image uploads and deletions.
- Refactored UserService to support multipart signup with image uploads.
- Enhanced AdminController to return system stats in a structured format.
- Created new DTOs for multipart signup requests and caching pagination.
- Updated application properties for improved configuration management.